syntax = "proto3";

package superjcd.productservice.v1;


option go_package =  "github.com/superjcd/productservice/genproto/v1";


service ProductService {
    // todo : create multiple 
    rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse){};
    rpc ListProduct(ListProductRequest) returns (ListProductResponse){};    // 获取的是

    rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse){};
    rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse){};
    
    // TODO: append multiple 
    rpc AppendAmzProductActiveDetail(AppendAmzProductActiveDetailRequest) returns (AppendAmzProductActiveDetailResponse){};
    rpc ListProductAmzDetals(ListAmzProductDetailsRequest) returns (ListAmzProductDetailsResponse);  
    rpc DeleteAmzProductActiveDetail(DeleteAmzProductActiveDetailRequest) returns (DeleteAmzProductActiveDetailResponse){};   
    rpc AppendAmzProductInactiveDetail(AppendAmzProductInactiveDetailRequest) returns (AppendAmzProductInactiveDetailResponse){};
    rpc DeleteAmzProductInactiveDetail(DeleteAmzProductInactiveDetailRequest) returns (DeleteAmzProductInactiveDetailResponse){};
    rpc GetProductHistoryInfo(GetProductHistoryInfoRequest) returns (GetProductHistoryInfoResponse){}; 
    
    // active 变化
    rpc AppendProductChanges(AppendProductChangesRequest) returns (AppendProductChangesResponse);  
    rpc ListProductChanges(ListProductChangesRequest) returns (ListProductChangesResponse){};
    rpc DeleteProductChanges(DeleteProductChangesRequest) returns (DeleteProductChangesResponse) {};
    
    // inactive details
    rpc AppendInactiveProductChanges(AppendProductChangesRequest) returns (AppendProductChangesResponse);  
    rpc ListInactiveProductChanges(ListProductChangesRequest) returns (ListProductChangesResponse){};
    rpc DeleteInactiveProductChanges(DeleteProductChangesRequest) returns (DeleteProductChangesResponse) {};

}

enum Status {
    success = 0;
    failure = 1;
}

// 产品基础信息
message Product {
    string sku = 1;
    string shop = 2;
    string asin = 3;
    string country= 4;
}


message AmzProductInactivateDetail{
    string asin=1;
    string country=2;
    string title=3;
    string bullet_points=4; 
    string create_date=5;
}

message AmzProductActiveDetail { 
    string asin =1;
    string country=2; 
    string price = 3; 
    string coupon = 4;
    string currency=5;
    string star=6;
    uint32 ratings=7;
    string image=8;
    string parent_asin=9;
    string category_info = 10;  
    string top_category_name=11;
    uint32 top_category_rank=12;
    string color=13;
    string weight=14;
    string weight_unit=15;
    string dimensions=16;
    string dimensions_unit=17;
    string create_date=18;
}



message CreateProductRequest{
    repeated Product products = 1;
}

message CreateProductResponse {
    string msg=1;
    Status status =2;
}


message ListProductRequest {
    int32 offset=1;
    int32 limit=2;    
    string shop=3;
    string country=4;
    string sku=5;
    string asin=6;
}

message ListProductResponse {
    string msg=1;
    Status status =2;
    repeated Product products=3;
}

message UpdateProductRequest {
    string sku = 1;
    string shop = 2;
    string asin = 3;
    string country= 4;
}

message UpdateProductResponse {
    string msg=1;
    Status status =2;
}

message DeleteProductRequest {
    string sku=1;
    string asin=2;
}

message DeleteProductResponse {
    string msg=1;
    Status status =2;
}


enum Field {
    price =0;
    star = 1;
    ratings=2;
    category_rank=3; 
    top_category_rank=4; 
}


message AppendAmzProductInactiveDetailRequest  {
    repeated AmzProductInactivateDetail details=1;
}

message AppendAmzProductInactiveDetailResponse {
    string msg=1;
    Status status =2;   
}

message AppendAmzProductActiveDetailRequest  {
    repeated AmzProductActiveDetail details=1;
}

message AppendAmzProductActiveDetailResponse {
    string msg=1;
    Status status =2;   
}

message DeleteAmzProductActiveDetailRequest {
    string min_create_date=1;
}

message DeleteAmzProductActiveDetailResponse {
    string msg=1;
    Status status =2;
}

message DeleteAmzProductInactiveDetailRequest {
    string min_create_date=1;
}

message DeleteAmzProductInactiveDetailResponse {
    string msg=1;
    Status status =2;
}


message AppendProductChangesRequest {
    string old_date=1;
    string new_date=2;
    string field=3;
}

message AppendProductChangesResponse {
    string msg = 1; 
    Status status =2;
}


message ListProductChangesRequest {
    string shop=1;
    string country=2;
    string create_date=3;
    string field=4;
    int32 offset=5;
    int32 limit=6;
}


message ProductChange {
    string asin=1;
    string country=2;
    string field  =3;
    string old_value=4;
    string new_value=5;

}

message ListProductChangesResponse {
    string msg=1;
    Status status =2;        
    repeated ProductChange Product_changes=3;
}


message DeleteProductChangesRequest {
    string min_create_date=1;
}

message DeleteProductChangesResponse {
    string msg=1;
    Status status =2;    
}



message ListAmzProductDetailsRequest {  
    string shop = 1;
    string country=2;
    string create_date=3;
    int32 offset=4;
    int32 limit=5;    
    
}


message ListAmzProductDetailsResponse {
    string msg=1;
    Status status =2;
    repeated AmzProductActiveDetail details=3;
    
}


message GetProductHistoryInfoRequest {
    string asin = 1;
    string country=2;
    string field=3;
    string start_date=4;
    string end_date=5;
}


message HistoryInfoRecord {
    string datetime=1;
    string value=2;

}

message GetProductHistoryInfoResponse {
    string msg=1;
    Status status =2;
    repeated HistoryInfoRecord records=3;
}